# hand_detection

./: DEVBLOG.md  README.md  main.py  pyproject.toml
src/: camera_worker.py  create_window.py  draw_landmarks.py  draw_utils.py  image_processor.py  mouse_simulator.py  mouse_worker.py  roi_manager.py  video_stream.py
