[project]
name = "hand-detection"
version = "0.1.0"
description = "Hand gesture detection application for mouse control"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "PyQt5>=5.15.0",
    "mediapipe==0.10.14",
    "opencv-python>=4.8.0",
    "pyautogui>=0.9.0",
    "numpy>=1.24.0",
    "pynput>=1.7.0"
]
